# nether

./: CMakeLists.txt  README.md  nether.cbp
cmake/: Findaudit.cmake
conf/: CMakeLists.txt  cynara.policy  file.policy  nether.policy  nether.rules
conf/systemd/: nether.service  nether.service.in
config/: nether.policy  nether.rules  setrules.sh
include/: nether_CynaraBackend.h  nether_Daemon.h  nether_DummyBackend.h  nether_FileBackend.h  nether_Manager.h  nether_Netlink.h  nether_PolicyBackend.h  nether_Types.h  nether_Utils.h
include/logger/: backend-file.hpp  backend-journal.hpp  backend-null.hpp  backend-stderr.hpp  backend-syslog.hpp  backend.hpp  ccolor.hpp  formatter.hpp  level.hpp  logger-scope.hpp  logger.hpp
packaging/: nether.spec
src/: CMakeLists.txt  nether_CynaraBackend.cpp  nether_FileBackend.cpp  nether_Main.cpp  nether_Manager.cpp  nether_Netlink.cpp  nether_NetworkUtils.cpp  nether_Utils.cpp
src/logger/: backend-file.cpp  backend-journal.cpp  backend-stderr.cpp  backend-syslog.cpp  ccolor.cpp  formatter.cpp  level.cpp  logger-scope.cpp  logger.cpp
tests/: Makefile  disable_cipso.sh  disable_cipso.sh.  gen_cynara.sh  gen_labels.sh  gen_rules.sh  load_cynara.sh  load_rules.sh  smack_net_test.c
