FILE (GLOB NETHER_SOURCES *.cpp)
FILE (GLOB VASUM_LOGGER logger/*.cpp)
PKG_CHECK_MODULES (CYNARA cynara-client-async QUIET)
PKG_CHECK_MODULES (NETFILTER libnetfilter_queue REQUIRED)
PKG_CHECK_MODULES (LOGGER libsystemd-journal QUIET)

ADD_EXECUTABLE(nether ${NETHER_SOURCES} ${VASUM_LOGGER})

INCLUDE_DIRECTORIES(../include
    ${EXTERNAL_INCLUDE_DIRS}
    ${CYNARA_INCLUDE_DIRS}
    ${NETFILTER_INCLUDE_DIRS}
    ${LOGGER_INCLUDE_DIRS}
)

if(CYNARA_FOUND)
	ADD_DEFINITIONS (-DHAVE_CYNARA=${CYNARA_FOUND})
endif()

if(LOGGER_FOUND)
	ADD_DEFINITIONS (-DHAVE_SYSTEMD_JOURNAL=${LOGGER_FOUND})
endif()

IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
	ADD_DEFINITIONS (-D_DEBUG=1)
ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)

TARGET_LINK_LIBRARIES(nether ${CYNARA_LIBRARIES}
    ${NETFILTER_LIBRARIES}
    ${LOGGER_LIBRARIES}
)
